Initial implementation of uniform prng.

--- a/numx/runtime/metal/kernels/CMakeLists.txt
+++ b/numx/runtime/metal/kernels/CMakeLists.txt
@@ -20,8 +20,9 @@ function(build_kernel KERNEL)
     set(KERNEL_AIR ${TARGET}.air ${KERNEL_AIR} PARENT_SCOPE)
 endfunction(build_kernel)
 
-build_kernel(binary binary.h)
 build_kernel(initializers utils.h)
+build_kernel(random utils.h)
+build_kernel(binary binary.h)
 build_kernel(unary unary.h)
 build_kernel(naive_gemm utils.h)
 build_kernel(tiled_gemm utils.h)
