--- a/numx/CMakeLists.txt
+++ b/numx/CMakeLists.txt
@@ -25,6 +25,7 @@ file(GLOB HEADER_FILES
     "${CMAKE_CURRENT_SOURCE_DIR}/graph/*.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/runtime/*.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/core/*.h"
+    "${CMAKE_CURRENT_SOURCE_DIR}/random/*.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/instrument/*.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/nn/*.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/optim/*.h"
@@ -36,6 +37,7 @@ file(GLOB SRC_FILES
     "${CMAKE_CURRENT_SOURCE_DIR}/graph/*.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/runtime/*.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/core/*.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/random/*.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/instrument/*.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/nn/*.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/optim/*.cpp"
